<resources>
    <string name="app_name">Android Boilerplate</string>
    <string name="ok">OK</string>
    <string name="get_data">Get Data</string>
    <string name="cancel">Cancel</string>

    <string name="sign_up">Sign Up</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="terms_and_condition_msg">Terms and Conditions</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="new_account">Create New Account?</string>
    <string name="login">Login</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="navigation_drawer_open">Drawer open</string>
    <string name="navigation_drawer_close">Drawer close\n</string>

</resources>